--- a/MeeplzAndroid/res/layout/main.xml
+++ b/MeeplzAndroid/res/layout/main.xml
@@ -15,13 +15,6 @@
   limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:orientation="horizontal" android:layout_height="match_parent" android:baselineAligned="true">
 </LinearLayout>
