--- a/twiPLZAndroid/assets/data/ui/GameScreen.ui
+++ b/twiPLZAndroid/assets/data/ui/GameScreen.ui
@@ -1,30 +1,15 @@
 debug
 	* height:100%
-	|width:60 |expand:x|width:100
+	|width:80 |expand:x|width:100
 	
 	{	
 	debug
-		* height:60 fill
-		'' expand
-		---
-		[imgTurn1]
-		---
-		[imgTurn2]
-		---
-		[imgTurn3]
-		---
-		[imgTurn4]
-		---
-		[imgTurn5]
-		---
-		[imgTurn6]
+		[imgTurn] expand fill
 	}
 	
 	{
-		[imgCenter] expand fill
 	}
-	fill
-	
+		
 	{
 	debug
 		[btnNewTile] fill:x height:100
